Iniciando aula 02 - NLW Heat - Origin

--- a/index.html
+++ b/index.html
@@ -9,40 +9,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      html,
-      body {
-        height: 100%;
-      }
-      body {
-        display: grid;
-        place-items: center;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      a {
-        color: lightgray;
-        text-decoration: none;
-      }
-    </style>
+    <link rel="stylesheet" href="assets/style/style.css" />
     <title>David Teixeira - DoWhile 2021</title>
   </head>
+  <!-- Conteúdo da página -->
   <body>
-    <!-- Conteúdo da página -->
-    <!-- 
-        HTML
-        HYPERTEXT MARKUP LANGUAGE
-        Hypertext é um texto com links, imagens, vídeos, etc
-        Markup são marcações (tags)
-        Tags        
-        Language -> pois há regras de escrita da linguagem
-    -->
     <!-- Texto no formato de título -->
     <h1>David Teixeira</h1>
     <!-- Inserção de link -->
+    <p id="my-text">Acesse o link</p>
     <a href="https://www.github.com/davidtmasin">davidtmasin</a>
   </body>
 </html>
