Trabalhando na aula 02 - NLW HEAT - Preparando o layout

--- a/index.html
+++ b/index.html
@@ -9,15 +9,74 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/style/style.css" />
     <title>David Teixeira - DoWhile 2021</title>
+    <link rel="stylesheet" href="assets/style/style.css" />
+    <link rel="shortcut icon" href="" type="image/x-icon" />
   </head>
   <!-- Conteúdo da página -->
   <body>
-    <!-- Texto no formato de título -->
-    <h1>David Teixeira</h1>
-    <!-- Inserção de link -->
-    <p id="my-text">Acesse o link</p>
-    <a href="https://www.github.com/davidtmasin">davidtmasin</a>
+    <!-- Conteúdo geral -->
+    <main>
+      <!-- Div não tem semântica -->
+      <div class="content">
+        <div class="avatar">
+          <img
+            src="assets/images/seloRocketSeat.svg"
+            alt="Selo branco da RocketSeat"
+          />
+          <img
+            src="http://lorempixel.com/185/185/people/"
+            alt="Foto de David Teixeira de Masin "
+          />
+        </div>
+        <!-- Texto no formato de título -->
+        <h1>David Teixeira</h1>
+        <!-- Inserção de link -->
+        <p id="my-text">Acesse o link</p>
+        <a href="https://www.github.com/davidtmasin">
+          <img src="assets/images/github.svg" alt="ícone do github" />
+          davidtmasin
+        </a>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor,
+          mollitia ullam eos hic nobis accusamus accusantium repellat illo
+          quisquam optio! Quasi vel nesciunt amet numquam ratione, architecto
+          aliquam unde sunt!
+        </p>
+
+        <ul>
+          <li>
+            <a href="https://www.youtube.com/c/tiodavideducação">
+              <img src="assets/images/yt-logo.svg" alt="ícone do youtube" />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.instagram.com/dteixeira.92">
+              <img
+                src="assets/images/insta-logo.svg"
+                alt="ícone do instagram"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.facebook.com/dteixeira.92">
+              <img src="assets/images/face-logo.svg" alt="ícone do facebook" />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.twitter.com/davidtmasin">
+              <img
+                src="assets/images/twitter-logo.svg"
+                alt="ícone do twitter"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
