--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <title>David Teixeira - DoWhile 2021</title>
     <link rel="stylesheet" href="assets/style/style.css" />
     <link rel="shortcut icon" href="" type="image/x-icon" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <!-- Conteúdo da página -->
   <body>
@@ -20,10 +27,13 @@
       <!-- Div não tem semântica -->
       <div class="content">
         <div class="avatar">
-          <img
-            src="assets/images/seloRocketSeat.svg"
-            alt="Selo branco da RocketSeat"
-          />
+          <span>
+            <img
+              src="assets/images/seloRocketSeat.svg"
+              alt="Selo branco da RocketSeat"
+            />
+          </span>
+
           <img
             src="http://lorempixel.com/185/185/people/"
             alt="Foto de David Teixeira de Masin "
