Finalização da aula 02 - NLW Heat - Origin

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Conteúdo geral -->
     <main>
       <!-- Div não tem semântica -->
-      <div class="content">
+      <div class="container">
         <div class="avatar">
           <span>
             <img
@@ -33,27 +33,20 @@
               alt="Selo branco da RocketSeat"
             />
           </span>
-
+          <!-- http://lorempixel.com/185/185/people/ -->
           <img
-            src="http://lorempixel.com/185/185/people/"
+            src="https://unavatar.now.sh/github/davidtmasin"
             alt="Foto de David Teixeira de Masin "
           />
         </div>
-        <!-- Texto no formato de título -->
+
         <h1>David Teixeira</h1>
-        <!-- Inserção de link -->
-        <p id="my-text">Acesse o link</p>
         <a href="https://www.github.com/davidtmasin">
           <img src="assets/images/github.svg" alt="ícone do github" />
           davidtmasin
         </a>
 
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor,
-          mollitia ullam eos hic nobis accusamus accusantium repellat illo
-          quisquam optio! Quasi vel nesciunt amet numquam ratione, architecto
-          aliquam unde sunt!
-        </p>
+        <p>Analista de Testes</p>
 
         <ul>
           <li>
