Iniciando Aula 03 - NLW Heat - Origin

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <h1>David Teixeira</h1>
-        <a href="https://www.github.com/davidtmasin">
+        <a href="https://www.github.com/davidtmasin" target="_blank">
           <img src="assets/images/github.svg" alt="ícone do github" />
           davidtmasin
         </a>
@@ -50,13 +50,16 @@
 
         <ul>
           <li>
-            <a href="https://www.youtube.com/c/tiodavideducação">
+            <a
+              href="https://www.youtube.com/c/tiodavideducação"
+              target="_blank"
+            >
               <img src="assets/images/yt-logo.svg" alt="ícone do youtube" />
             </a>
           </li>
 
           <li>
-            <a href="https://www.instagram.com/dteixeira.92">
+            <a href="https://www.instagram.com/dteixeira.92" target="_blank">
               <img
                 src="assets/images/insta-logo.svg"
                 alt="ícone do instagram"
@@ -65,13 +68,13 @@
           </li>
 
           <li>
-            <a href="https://www.facebook.com/dteixeira.92">
+            <a href="https://www.facebook.com/dteixeira.92" target="_blank">
               <img src="assets/images/face-logo.svg" alt="ícone do facebook" />
             </a>
           </li>
 
           <li>
-            <a href="https://www.twitter.com/davidtmasin">
+            <a href="https://www.twitter.com/davidtmasin" target="_blank">
               <img
                 src="assets/images/twitter-logo.svg"
                 alt="ícone do twitter"
@@ -81,5 +84,14 @@
         </ul>
       </div>
     </main>
+    <script>
+      const linksSocialMedia = {
+        github: 'davidtmasin',
+        youtube: 'tiodavideducação',
+        facebook: 'dteixeira.92',
+        instagram: 'dteixeira.92',
+        twitter: 'davidtmasin'
+      }
+    </script>
   </body>
 </html>
