--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <!-- Conteúdo da tag head -->
     <!-- Configs da página -->
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>David Teixeira - DoWhile 2021</title>
     <link rel="stylesheet" href="assets/style/style.css" />
-    <link rel="shortcut icon" href="" type="image/x-icon" />
-
+    <link
+      rel="shortcut icon"
+      href="assets/images/seloRocketSeat.svg"
+      type="image/x-icon"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
